Fix swagger doc for post endpoint
