# product-api/swagger.yaml
@@ -64,7 +64,7 @@ paths:
                     $ref: '#/definitions/Product'
             responses:
                 "201":
-                    $ref: '#/responses/noContent'
+                    $ref: '#/responses/noContentResponse'
             tags:
                 - products
     /products/{id}:
@@ -87,6 +87,14 @@ paths:
         put:
             description: Update the specified product
             operationId: updateProduct
+            parameters:
+                - description: The id of the product to delete from the database
+                  format: int64
+                  in: path
+                  name: id
+                  required: true
+                  type: integer
+                  x-go-name: ID
             responses:
                 "200":
                     $ref: '#/responses/productResponse'
